 pyweather 2.1版本
     发布于2021/7/18

   -在菜单栏中增加了'检查更新'按钮
   -增加了更多的错误处理

 pyweather 2.0版本：
    发布于2021/7/17
   
   -这是一个里程碑级的功能更新：
   -增加了自动更新功能，每次启动自动检测是否存在新版本，并提示更新
   -增加requirements.txt：罗列程序引用到的所有第三方库

 pyweather 1.9.5版本:
     发布于2021/7/6
    
    -优化了历史记录在菜单栏，窗口界面的显示内容
    -在历史记录菜单里增加了查询当前天气选项

 pyweather 1.9.3版本：
     发布于2021/7/6

   -增加了设置存储历史记录条数功能 
   -增加了稳定性

 pyweather 1.9版本：
    发布于2021/7/4

   -这是一个大的功能性更新：
   -增加了选择城市功能：可手动选择城市查询
   -稳定性修复

 pyweather 1.7.1版本:
   发布于2021/7/2

   -修复了ip错误窗口不起作用的bug

 pyweather 1.7版本： 
   发布于2021/7/2
  
  -这是一个大的功能更新：
  -增加了历史记录功能: 自动保存历史记录，可手动加载，清除历史记录
  -更改了农历信息的显示方式

 pyweather 1.4版本：
  发布于2021/6/30

  -增加了农历信息与风向信息
  -增加了exe程序的version信息
  -界面调整与优化

 pyweather 1.3版本:
  发布于2021/6/29

  -readme自述文件增加了文件截图
  -对代码文件的注释进行了优化
  -对代码文件的一些PEP8警告进行了修复
  -github中增加了release
  -简化了分支
  -去掉了不太美观的背景图

 pyweather 1.2版本:
  发布于 2021/6/29

  - 删除了无用文件
  - 更改了程序的图标，窗口标题，任务栏图标。
  - 增加了上传过滤文件 gitignore
  - 增加了readme自述文件
  - 优化了程序启动速度

pyweather 1.0版本:
  发布于 2021/6/27

这是pyweather的第一个版本，包含：
  -可视化界面
  -ip自动获取
  -地理位置自动获取
  -自动查询当前城市天气

 