@@ -31,7 +31,10 @@ enjoy it.
 3. 打开解压后的文件夹，启动 "pyweather.exe".
 #### **注意事项**
  目前暂不支持国外ip查询，如使用国外ip会报错！
- 
+####命令行的使用
+- 在命令行中加入参数--cmd, print天气和ip等信息 ,例: pyweather.exe --cmd
+- 在 --cmd 后面加上城市名可查询城市天气 ,例: pyweather.exe --cmd 长春
+
 **使用愉快**。
 ### **TO DO**
 - ~~通过用户IP获取其所在城市，默认显示该城市天气~~
@@ -42,10 +45,10 @@ enjoy it.
 - ~~实现自更新功能，单个 exe 程序，更新后弹出提醒~~
 - ~~添加更多关于更新的错误处理~~
 - ~~在菜单栏中添加检查更新功能~~
-- 增加cmd命令
-- 增加'关于作者'窗口
+- ~~增加cmd命令~~
+- ~~增加'关于作者'窗口~~
 - 优化流畅性
-- 增加邮件报警功能
+
 
 
 
