@@ -149,6 +149,11 @@ class Ui_ip_window(object):
         self.update.setText('检查更新')
         self.menu_6.addAction(self.update)
         self.menuBar.addAction(self.menu_6.menuAction())
+        self.about = QtWidgets.QAction(ip_window)
+        self.about.setEnabled(True)
+        self.about.setObjectName('about')
+        self.about.setText('关于程序(about)')
+        self.menu_6.addAction(self.about)
         self.statusBar = QtWidgets.QStatusBar(ip_window)
         self.statusBar.setObjectName("statusBar")
         ip_window.setStatusBar(self.statusBar)
